[tool.poetry]
name = "passhashgen"
version = "0.1.0"
description = "PassHashGen is a program that generates passwords of the specified length, number, and strength. The option to hash the password(s) and output either the hash/passwords/both to the specified text file(s) is available. It is also possible to read a text file of password(s) and convert them to a hash of specified type."
authors = ["Laminad"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
argparse3 = "^3.0.0"
cryptography = "^43.0.0"
libnacl = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
